--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
         <span>PHARRELLWILLIAM.COM</span>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
-        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png"
+        <img src="https://s3.amazonaws.com/learn-verified/columbia-logo.png" alt="Colombia Records">
 
         <!-- span text 'COLUMBIARECORDS.COM' -->
+        <span>COLUMBIARECORDS.COM</span>
 
         <br>
 
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/sony-logo.png] -->
+        <img src="https://s3.amazonaws.com/learn-verified/sony-logo.png"
 
       </div>
     </div>
